--- a/user/themes/course-hub-bootstrap/templates/partials/blog_item.html.twig
+++ b/user/themes/course-hub-bootstrap/templates/partials/blog_item.html.twig
@@ -140,13 +140,14 @@
       <p class="text-left">
         {% if not page.isLast %}
           <a class="btn btn-default" href="{{ page.prevSibling.url }}">
-            <i class="fa fa-chevron-left" aria-hidden="true"></i>
-            Previous
+              <i class="fa fa-chevron-left" aria-hidden="true"></i>
+              {{ t("BLOG.PREVIOUS") }}
           </a>
         {% endif %}
 
         {% if not page.isFirst %}
-          <a class="btn btn-default" href="{{ page.nextSibling.url }}">Next
+            <a class="btn btn-default" href="{{ page.nextSibling.url }}">
+                {{ t("BLOG.NEXT") }}
             <i class="fa fa-chevron-right" aria-hidden="true"></i>
           </a>
         {% endif %}
